--- a/Layout - Telas e Treinamento/index.html
+++ b/Layout - Telas e Treinamento/index.html
@@ -16,6 +16,7 @@
     <main>
         <section class="apresentacao">
             <h2>Principais escolhas</h2>
+            alo
             
             <a href="#"><img width="190" height="150" src="/Hamburgueria/Hamburger-Transparent-Background.png" alt="fotoAleatoria"></a>
             <a href="#"><img width="250" height="150" src="/Hamburgueria/SHEDER.png" alt="fotoAleatoria" onclick="href='https://www.google.com'"></a>
